--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@percy/cypress": "3.1.1",
     "autoprefixer": "10.2.5",
     "cypress": "12.1.0",
+    "cypress-mailosaur": "^2.13.0",
     "cypress-recurse": "1.8.1",
     "imap-simple": "5.0.0",
     "lodash": "4.17.21",
