--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Check out code 🛎
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # install NPM dependencies and Cypress
       # https://github.com/cypress-io/github-action
       - name: Install 📦
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
           runTests: false
 
@@ -24,15 +24,13 @@ jobs:
 
       # run Cypress tests
       - name: E2E tests 🧪
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
           # we already installed everything
           install: false
           # make sure the app has fully started
           wait-on: 'http://localhost:3000'
-          # run Percy program that would run Cypress
-          # and forward snapshots to the Percy service
-          command-prefix: 'percy exec -- npx'
-        # inject the Percy token
+        # need Mailosaur variables
         env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          CYPRESS_MAILOSAUR_SERVER_ID: ${{ secrets.CYPRESS_MAILOSAUR_SERVER_ID }}
+          CYPRESS_MAILOSAUR_API_KEY: ${{ secrets.CYPRESS_MAILOSAUR_API_KEY }}
