--- a/package.json
+++ b/package.json
@@ -9,23 +9,17 @@
     "start": "next dev",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "local": "start-test 3000 cy:open"
+    "local": "start-test 3000 cy:open",
+    "badges": "npx -p dependency-version-badge update-badge cypress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@percy/cli": "1.0.0-beta.50",
-    "@percy/cypress": "3.1.1",
     "autoprefixer": "10.2.5",
     "cypress": "12.1.0",
     "cypress-log-to-term": "^1.0.0",
     "cypress-mailosaur": "^2.13.0",
-    "cypress-recurse": "1.8.1",
-    "imap-simple": "5.0.0",
-    "lodash": "4.17.21",
-    "mailparser": "3.3.0",
-    "nodemailer": "6.6.3",
     "postcss": "8.2.13",
     "prettier": "2.8.1",
     "start-server-and-test": "1.12.1",
