--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ jobs:
       - name: Check out code 🛎
         uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       # install NPM dependencies and Cypress
       # https://github.com/cypress-io/github-action
       - name: Install 📦
