--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "autoprefixer": "10.2.5",
     "cypress": "12.7.0",
+    "cypress-data-session": "^2.3.1",
     "cypress-log-to-term": "^1.5.2",
     "cypress-mailosaur": "^2.13.0",
     "postcss": "8.2.13",
