--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "10.2.5",
+    "axios": "^1.3.4",
     "cypress": "12.7.0",
     "cypress-data-session": "^2.3.1",
     "cypress-log-to-term": "^1.5.2",
